--- a/main.html
+++ b/main.html
@@ -79,6 +79,9 @@
       </div>
       <!-- End About     -->
       <!-- card project -->
+      <div>
+        <h2 style="text-align: center; margin: 30px;"> My project</h2>
+      </div>
       <div class="container mt-3">
         <div class="row row-cols-1 row-cols-md-3">
             <div class="col mb-4">
@@ -99,7 +102,7 @@
                 </div>
               </div>
             </div>
-            <div class="col mb-4">
+            <div class="col mb-4 mr-4">
               <div class="card h-100">
                 <img src="assets/images/androidstudio.png" class="card-img-top" height="350px" alt="...">
                 <div class="card-body">
